fix: always show anchor tag on mobile

--- a/src/assets/scss/global/base-styles.scss
+++ b/src/assets/scss/global/base-styles.scss
@@ -280,12 +280,3 @@ fieldset {
   margin-bottom: 0.5rem;
   font-weight: 600;
 }
-
-.header-anchor {
-  float: left;
-  font-size: .85em;
-  margin-left: -0.87em;
-  padding-right: 0.23em;
-  margin-top: 0.125em;
-  opacity: 0;
-}
